--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 <!-- _layouts/cv.html -->
-        <div class="post">
-
-        <object data="../assets/pdf/SooHyuk_Cho_CV.pdf" width="750" height="1000" type='application/pdf'></object>
-
-        </div>
+   <head>
+        {%- if page.redirect -%}
+          <meta http-equiv="refresh" content="3; url={{ site.baseurl }}/" />
+        {%- endif -%}
+        {%- if page.redirect_to -%}
+          <meta http-equiv="refresh" content="0; url={{ page.redirect_to }}/" />
+        {%- endif -%}
+        {% include head.html %}
+   </head>
